# logos-execution-zone

./: .deny.toml  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  demo.sh  deny.toml  flake.nix  token-authority.idl.json
.github/workflows/: bench-regression.yml  ci.yml
common/src/: transaction.rs
configs/docker-all-in-one/: sequencer_config.json
docs/: LP-0012-README.md  LP-0013-README.md  event-format.md
docs/LEZ testnet v0.1 tutorials/: keycard.md
docs/benchmarks/: README.md  crypto_primitives_bench.md  cycle_bench.md  e2e_bench.md  integration_bench.md  wallet_crypto_bench.md
examples/emit_event_demo/: Cargo.toml
examples/emit_event_demo/methods/: Cargo.toml  build.rs
examples/emit_event_demo/methods/guest/: Cargo.toml
examples/emit_event_demo/src/: lib.rs
examples/event_indexer/: Cargo.toml
examples/event_indexer/src/: main.rs
indexer/core/src/: block_store.rs  lib.rs
indexer/ffi/: Cargo.toml  indexer_ffi.h
indexer/ffi/src/api/: query.rs
indexer/ffi/src/api/types/: account.rs  block.rs  transaction.rs
indexer/service/rpc/src/: lib.rs
indexer/service/src/: mock_service.rs  service.rs
integration_tests/: Cargo.toml
integration_tests/src/: config.rs  lib.rs  setup.rs
integration_tests/tests/: account.rs  ata.rs  indexer_ffi.rs  keys.rs  keys_restoration.rs  pinata.rs  private_pda.rs  shared_accounts.rs  token.rs  tps.rs  wallet_ffi.rs
integration_tests/tests/auth_transfer/: private.rs  public.rs
key_protocol/src/key_management/: ephemeral_key_holder.rs  group_key_holder.rs  mod.rs
key_protocol/src/key_management/key_tree/: keys_private.rs  mod.rs
key_protocol/src/key_protocol_core/: mod.rs
keycard_wallet/: Cargo.toml  wallet_with_keycard.sh
keycard_wallet/keycard_applets/: LEE_keycard.cap
keycard_wallet/python/: keycard_wallet.py
keycard_wallet/src/: lib.rs  python_path.rs
keycard_wallet/tests/: keycard_tests.sh
lez-authority/: Cargo.toml
lez-authority/src/: lib.rs
lez-events/: Cargo.toml
lez-events-decoder/: Cargo.toml
lez-events-decoder/src/: main.rs
lez-events/src/: lib.rs
nssa/: Cargo.toml
nssa/core/: Cargo.toml
nssa/core/src/: circuit_io.rs  lib.rs  nullifier.rs  program.rs
nssa/core/src/encryption/: mod.rs  shared_key_derivation.rs
nssa/src/: error.rs  lib.rs  program.rs  state.rs  validated_state_diff.rs
nssa/src/privacy_preserving_transaction/: circuit.rs  message.rs
nssa/src/public_transaction/: transaction.rs
program_methods/: build.rs
program_methods/guest/: Cargo.toml
programs/faucet/core/: Cargo.toml
programs/faucet/core/src/: lib.rs
programs/token/core/src/: lib.rs
programs/token/src/: burn.rs  mint.rs  new_definition.rs  set_authority.rs  tests.rs
programs/vault/core/: Cargo.toml
programs/vault/core/src/: lib.rs
scripts/: demo-full-flow.sh
scripts/examples/: fixed_supply_token.sh  variable_supply_token.sh
sequencer/core/: Cargo.toml
sequencer/core/src/: block_store.rs  config.rs  lib.rs
sequencer/service/configs/debug/: sequencer_config.json
sequencer/service/configs/docker/: sequencer_config.json
sequencer/service/rpc/: Cargo.toml
sequencer/service/rpc/src/: lib.rs
sequencer/service/src/: service.rs
storage/src/indexer/: mod.rs
test_fixtures/: Cargo.toml
test_fixtures/src/: config.rs  lib.rs
test_program_methods/guest/: Cargo.toml
testnet_initial_state/src/: lib.rs
tools/crypto_primitives_bench/: Cargo.toml  README.md
tools/crypto_primitives_bench/benches/: primitives.rs
tools/crypto_primitives_bench/src/: main.rs
tools/cycle_bench/: Cargo.toml  README.md
tools/cycle_bench/benches/: verify.rs
tools/cycle_bench/src/: main.rs  ppe.rs  stats.rs
tools/cycle_bench/src/ppe/: ppe_impl.rs
tools/e2e_bench/: Cargo.toml  README.md
tools/e2e_bench/src/: bedrock_handle.rs  bench_context.rs  harness.rs  main.rs
tools/e2e_bench/src/scenarios/: amm.rs  fanout.rs  parallel.rs  private.rs  token.rs
tools/integration_bench/: Cargo.toml
tools/integration_bench/src/: harness.rs  main.rs
tools/integration_bench/src/scenarios/: amm.rs  fanout.rs  parallel.rs  private.rs  token.rs
tools/wallet_crypto_bench/: Cargo.toml  README.md
tools/wallet_crypto_bench/src/: main.rs
wallet/: Cargo.toml
wallet-ffi/: Cargo.toml
wallet-ffi/src/: transfer.rs
wallet/src/: account.rs  chain_storage.rs  config.rs  helperfunctions.rs  lib.rs  privacy_preserving_tx.rs  signing.rs  storage.rs
wallet/src/cli/: account.rs  group.rs  keycard.rs  mod.rs
wallet/src/cli/programs/: native_token_transfer.rs
wallet/src/program_facades/: ata.rs  pinata.rs  token.rs
wallet/src/program_facades/native_token_transfer/: deshielded.rs  private.rs  public.rs  shielded.rs
wallet/src/storage/: key_chain.rs  persistent.rs
