[package]
name = "e2e_bench"
version = "0.1.0"
edition = "2024"
license = { workspace = true }
publish = false

[lints]
workspace = true

[dependencies]
integration_tests.workspace = true
wallet.workspace = true
nssa.workspace = true
nssa_core = { workspace = true, features = ["host"] }
sequencer_service.workspace = true
sequencer_service_rpc = { workspace = true, features = ["client"] }
indexer_service.workspace = true
indexer_service_rpc = { workspace = true, features = ["client"] }
jsonrpsee = { workspace = true, features = ["ws-client"] }
token_core.workspace = true
amm_core.workspace = true
common.workspace = true
tempfile.workspace = true
borsh.workspace = true
chrono.workspace = true

anyhow.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
