[package]
name = "wallet_crypto_bench"
version = "0.1.0"
edition = "2024"
license = { workspace = true }
publish = false

[lints]
workspace = true

[dependencies]
key_protocol.workspace = true
nssa_core = { workspace = true, features = ["host"] }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bip39.workspace = true
rand = { workspace = true }
